tests/should_fail/sealed.stderr
error: This trait methods overrides a sealed implementation.
  --> sealed.rs:21:5
   |
21 |     fn g(self, x: Int) -> Int {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: This sealed implementation is overriden.
 --> sealed.rs:9:5
  |
9 |     fn g(self, x: Int) -> Int {
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

